<resources>
    <string name="app_name">RobotController</string>
    <string name="action_settings">Settings</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="forward">Forward</string>
    <string name="back">Back</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="camera">Camera</string>
    <string name="movement">Movement</string>
    <string name="basic">Basic controls</string>
    <string name="tricks">Tricks</string>
    <string name="duck">Duck</string>
    <string name="wave">Wave</string>
    <string name="ledOn">Turn LED ON</string>
    <string name="ledOff">Turn LED OFF</string>
</resources>
